# Celestine-Bot

./: .editorconfig  README.md  dates.json  discloud.config  main.py  pyproject.toml  requirements.txt  schedule.json  squarecloud.config
src/: variables.py
src/actions/: create_json.py  show_json.py  update_json.py  verify_time.py
src/commands/: create_thread.py  delete_all_threads.py  hello.py  init_check_schedule.py  setup_schedule.py  show_schedule.py
src/config/: discord.py  env.py
src/events/: check_schedule.py  on_message.py  on_ready.py
