[tool.poetry]
name = "celestine"
version = "0.1.0"
description = "Celestine is a Discord bot for management."
authors = [
    "Philipe Cerqueira <philipe.cerq@gmail.com>",
    "Matheus Souza <matheusouzadearaujo@gmail.com>"
]
repository = "https://github.com/philipecerqueira/Celestine-Bot"
homepage = "https://github.com/philipecerqueira/Celestine-Bot"
readme = "README.md"
keywords = ["bot", "discord", "celestine"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.2.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
